# ChessBlitz

./: .gitignore
backend/: .gitignore  README.md  app.py  functions.py  pyproject.toml  pyvenv.cfg  requirements.txt
backend/src/: app.py
backend/src/backend/: __init__.py  app.py  functions.py
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  index.tsx
frontend/app/(tabs)/: _layout.tsx  daily.tsx  practice.tsx  profile.tsx  ranking.tsx  themes.tsx
frontend/app/puzzles/: daily-puzzle.tsx
frontend/components/: CheckerPreview.tsx  ChessboardDemo.tsx  GetHint.tsx  Notation.tsx  RandomPuzzle.tsx
frontend/components/ui/: IconSymbol.tsx
frontend/components/utils/: Time.tsx
frontend/constants/: Colors.ts  urls.tsx
frontend/context/: ThemeContext.tsx
frontend/ios/: Podfile
frontend/ios/chessblitzfrontend/: Info.plist
frontend/ios/chessblitzfrontend.xcodeproj/: project.pbxproj
frontend/ios/chessblitzfrontend.xcodeproj/xcshareddata/xcschemes/: chessblitzfrontend.xcscheme
frontend/ios/chessblitzfrontend.xcworkspace/: contents.xcworkspacedata
react-native-app/: package-lock.json  package.json
