[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devah Schaefers", email = "73009338+devahschaefers@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chess>=1.11.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "google-generativeai>=0.8.5",
    "openai>=1.76.0",
    "pyrebase4>=4.8.0",
    "python-dotenv>=1.1.0",
    "setuptools>=79.0.1",
]

[project.scripts]
backend = "backend.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
